<resources>
    <string name="app_name">Cru</string>
    <string name="phone_number">6508155687</string>
    <string name="sms_message">Testing to Mallika</string>

    <string name="parseAppId">rxxFMaAKScGNlMw7hWUv1I6d7LNJ2jbeTwejpstw</string>
    <string name="parseClientKey">Smo0iKqpWubdBmXmnQ33ILZ4mc0Ddw3ZRm6oCK7z</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="days">days ago</string>

    <!-- Button Text -->
    <string name="button_apply">Apply Now</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_prev">&lt; Previous</string>
    <string name="button_next">Next &gt;</string>
    <string name="button_need_ride">Need a ride?</string>
    <string name="button_make_ride">I can drive!</string>
    <string name="button_ride_list">View Ride List</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search: </string>

    <!-- Toast Messages -->
    <string name="toast_calendar_added">Added event to calendar</string>
    <string name="toast_calendar_removed">Removed event from calendar</string>
    <string name="toast_no_ridesharing">Ridesharing is not available for this event</string>
    <string name="toast_no_rides">There are currently no open rides for this event</string>
    <string name="toast_no_my_rides">You currently have no rides</string>
    <string name="toast_no_facebook">No Facebook page for this event</string>
    <string name="toast_no_map">No location for this event</string>
    <string name="toast_no_events">Could not load events</string>
    <string name="toast_no_summer_missions">Could not load summer missions</string>
    <string name="toast_no_videos">Could not load YouTube videos</string>
    <string name="toast_no_articles">Could not load article resources</string>
    <string name="toast_no_ministry_teams">Could not load ministry teams</string>

    <!--    Preferences     -->
    <string name="settings_event_notifications">Receive Event Notifications</string>
    <string name="preferences_file">com.will_code_for_food.crucentralcoast_preferences</string>

    <!--    Ridesharing     -->
    <string name="ridesharing_join">Join Ride</string>
    <string name="ridesharing_leave">Leave Ride</string>
    <string name="ridesharing_cancel">Cancel Ride</string>
    <string name="ridesharing_driver_notification">%%s has joined your ride to %%s!</string>
    <string name="ridesharing_leaving_date" formatted="false">Leaving %s on %s</string>
    <string name="ridesharing_leaving_location" formatted="false">from %s</string>
    <string name="ridesharing_seats_left" formatted="false">%d seats </string>
    <string name="ridesharing_seat_left" formatted="false">%d seat </string>
    <string name="ridesharing_header" formatted="false">Ride Sharing Events</string>
    <string name="ridesharing_event">Event: &#160;</string>
    <string name="ridesharing_driver">Driver: &#160;</string>
    <string name="ridesharing_pickup_location">Location: &#160;</string>
    <string name="ridesharing_unknown_location">unknown</string>
    <string name="ridesharing_time">Time: &#160;</string>
    <string name="ridesharing_seats_available">Seats: &#160;</string>
    <string name="ridesharing_to">to</string>
    <string name="ridesharing_to_event">&#160; to event — &#160;</string>
    <string name="ridesharing_from">from</string>
    <string name="ridesharing_from_event">&#160; from event &#160;</string>
    <string name="ridesharing_direction">Direction: &#160;</string>
    <string name="ridesharing_driver_form_title">Driver Form</string>
    <string name="ridesharing_my_rides_title">My Rides</string>

    <!-- Get Involved -->
    <string name="ministry_team_signup_message">%1$s has signed up for %2$s. Their email is %3$s,
        and their number is %4$s.</string>
    <string name="ministry_team_signup_header">Sign up for Community Team!</string>
    <string name="mt_name_hint">Name</string>
    <string name="mt_number_hint">Number</string>
    <string name="mt_email_hint">Email</string>
    <string name="ministry_team_header">Ministry Teams</string>
    <string name="get_involved_header">Get Involved</string>

    <!-- Font formatting -->
    <string name="default_serif">SERIF</string>
    <string name="new_default">FreigSanProLiglt.otf</string>

    <!-- Ridesharing Forms -->
    <string name="ridesharing_username">Please Enter Your Name</string>
    <string name="ridesharing_username_question_name">name</string>
    <string name="ridesharing_number">Please Enter Your Phone Number</string>
    <string name="ridesharing_number_question_name">phone number</string>
    <string name="ridesharing_choose_day">What day would you like to leave for the event?</string>
    <string name="ridesharing_choose_day_question_name">departure date</string>
    <string name="ridesharing_choose_time">When would you like to leave for the event?</string>
    <string name="ridesharing_choose_time_question_name">departure time</string>
    <string name="ridesharing_one_way_to_event">One-way to the event</string>
    <string name="ridesharing_one_way_from_event">One-way from the event</string>
    <string name="ridesharing_two_way">Two-way, to and from the event</string>
    <string name="ridesharing_two_way_date">What day would you like to leave the event?</string>
    <string name="ridesharing_two_way_date_question_name">event leave date</string>
    <string name="ridesharing_two_way_time">What time would you like to leave the event?</string>
    <string name="ridesharing_two_way_time_question_name">event leave time</string>
    <string name="ridesharing_location">Where are you leaving from?</string>
    <string name="ridesharing_location_question_name">leave location</string>
    <string name="ridesharing_seats">How many seats are available? Don\'t include yourself!</string>
    <string name="ridesharing_seats_question_name">number of seats</string>
    <string name="ridesharing_choose_gender">Gender</string>
    <string name="ridesharing_choose_gender_question_name">gender</string>
    <string name="ridesharing_choose_type">What kind of ride?</string>
    <string name="ridesharing_choose_type_question_name">ride type</string>
    <string name="form_valid">Form is valid!</string>
    <string name="form_incomplete">\'%s\' is a required field</string>
    <string name="form_incorrect_type">Your answer to \'%s\' is the incorrect type</string>
    <string name="form_past_date">You gave a time for \'%s\' that\'s in the past!</string>
    <string name="form_future_date">You gave a time for \'%s\' that\'s in the future!</string>
    <string name="form_generic_error">Your answer to \'%s\' is invalid</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!-- Log in form -->
    <string name="login_title">Log In</string>
    <string name="login_user">Enter your username</string>
    <string name="login_user_question_name">username</string>
    <string name="login_pass">Enter your password (case sensitive)</string>
    <string name="login_pass_question_name">password</string>

    <string name="cached_data_msg">No internet connection! This is old data!</string>
    <string name="login_invalid_cred">This username and password combo is incorrect</string>
    <string name="logout_message">You have been logged out</string>

    <!-- Crash Reports -->
    <string name="crash_report_button">Submit</string>
    <string name="oops">Oops!</string>
    <string name="no_internet">No internet connection</string>
    <string name="please_restart">The initial loading setup could not be completed. Please check your connection and restart the app.</string>
</resources>
