<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/name_prompt"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mt_name_hint" />
    <EditText
        android:id="@+id/email_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mt_email_hint"/>
    <EditText
        android:id="@+id/number_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mt_number_hint"/>
</LinearLayout>