<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              tools:context=".view.resources.LogInActivity">

    <EditText android:id="@+id/login_username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="@string/login_user" />

    <EditText android:id="@+id/login_password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="@string/login_pass"
              android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:onClick="attemptLogIn"
        android:text="@string/login_title" />

</LinearLayout>